# nihtest-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  INSTALL.md  Makefile.am  NiHTest.pm  README.md  TODO  TODO.md  appveyor.yml  cmake-config.h.in
.github/workflows/: build.yml
developer-xcode/: config.h
developer-xcode/NiHTest.xcodeproj/: project.pbxproj
developer-xcode/NiHTest.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
developer-xcode/NiHTest.xcodeproj/xcshareddata/xcschemes/: all.xcscheme  cat.xcscheme  echo.xcscheme  false.xcscheme  file.xcscheme  getenv.xcscheme  nihtest.xcscheme  true.xcscheme
man/: CMakeLists.txt  nihtest-case.html  nihtest-case.man  nihtest-case.mdoc  nihtest-config.man  nihtest-config.mdoc  nihtest.conf.html  nihtest.html  nihtest.man  nihtest.mdoc  update-html.cmake
regress/: CMakeLists.txt  cat.c  cat.test  diff-1.input  diff-1.test  diff-2.input  diff-2.test  echo.c  echo.test  false-fail.test  false-pass.test  features-fail.test  features-pass.test  features-skip.test  file-del-fail.test  file-del-pass.test  file-new-fail.test  file-new-pass.test  file-pass.test  file-subdirectory-pass.test  file.c  getenv.c  nihtest.conf.in  parameter-tests-1.input  preload-pass.test  setenv-pass.test  skip.test  stderr-fail.test  stderr-pass.test  stderr-replace-pass.test  stdin-file-pass.test  stdin-pass.test  stdout-fail.test  stdout-pass.test  success.txt  true-fail.test  true-pass.test
src/: CMakeLists.txt  CompareArrays.cc  CompareArrays.h  CompareFiles.cc  CompareFiles.h  Configuration.cc  Configuration.h  Exception.cc  Exception.h  OS-Unix-run.cc  OS-Unix.cc  OS-Windows.cc  OS.cc  OS.h  Parser.cc  Parser.h  Test.cc  Test.h  TestParser.cc  TestParser.h  Variables.cc  Variables.h  compat.h  getopt_long.c  getopt_long.h  getprogname.c  nihtest.cc  nihtest.h
